# talks

./: .gitignore
effect-days-25/: slides.md
effect_days_25/: slides.md
event-driven-redux/: README.md
react-miami-25/: bun.lockb  cfp.md  intro-to-result.ts  outline.md  package.json  result.ts  slides.md  slides.wip.md
react_alicante_24/code/: .gitignore  bun.lockb  dune  dune-project  package.json
react_alicante_24/code/.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
react_alicante_24/code/.direnv/flake-inputs/: 2d28a6gvfqf4998jmjiv00857cp66anl-source  6imfagmcyy3ajy16iw6w18xickkxbd3m-source  qk41awjhkgd4znj5bi9j105q2xchy665-source
react_alicante_24/code/_build/: log
react_alicante_24/code/dev-tools.locks/ocamlformat/: lock.dune  ocamlformat-lib.pkg  ocamlformat.pkg
react_alicante_24/code/dune.lock/: lock.dune
react_alicante_24/code/src/: ai_app.ml  anthropic.ml  app.ml  counter.mlx  dune
react_alicante_24/code/src/typescript/: bun.lockb  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo
react_alicante_24/code/src/typescript/src/: App.tsx  counter.tsx
react_alicante_24/code/src/typescript/src/components/: domain-search.tsx
react_alicante_24/code/src_ocaml/: App.mlx  components.ml  domainSearch.mlx  dune  index.html  tailwind.config.js  vite.config.ts
react_alicante_24/code/src_ocaml/public/: styles.css
react_alicante_24/code/src_ocaml/src/components/: domain-search.tsx
rvajs-25/: EffectTS @ Vercel - RVA JS 25.pdf.crdownload
(+22 files in other folders)
