(lang dune 3.17)

(name code)
(generate_opam_files true)
(source (github dmmulroy/talks))

;; Use Melange for Javascript Compilation
(using melange 0.1)

;; Set up mlx files
(dialect
 (name mlx)
 (implementation
  (extension mlx)
  (merlin_reader mlx)
  (preprocess
   (run mlx-pp %{input-file}))))


(package
 (name code)
 (allow_empty)
 (depends 
   ocaml dune melange reason-react
   ;; `.mlx` support
   mlx ocamlmerlin-mlx
   ;; Dev Tools
   ocamlformat ocaml-lsp-server)
 )
